[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geminilayers"
version = "0.1.0"
dependencies = [
    "google-genai"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools]
packages = ["geminilayers"]
